--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -28,6 +28,7 @@ nav {
   display: flex;
   gap: 3.5rem;
   align-items: center;
+  height: 100%;
 }
 .nav__links a {
   transition: var(--transition);
@@ -35,7 +36,20 @@ nav {
 .nav__links a:hover {
   color: var(--color-red);
 }
-
+.nav__links li:last-child {
+  background: var(--color-red);
+  height: 100%;
+  display: flex;
+  align-items: center;
+  width: 200px;
+  justify-content: center;
+  transition: var(--transition);
+}
+.nav__links li:last-child:hover {
+  color: var(--color-text);
+  background-color: var(--color-black);
+  cursor: pointer;
+}
 .active-nav {
   position: relative;
   border-bottom: 2px solid var(--color-red);
@@ -82,6 +96,7 @@ nav {
     opacity: 0;
     transform-origin: top;
   }
+
   .nav__links li:nth-child(2) {
     animation-delay: 200ms;
   }
@@ -114,6 +129,9 @@ nav {
     display: flex;
     align-items: center;
     padding: 1rem 5rem 1rem 3rem;
+  }
+  .nav__links li:last-child {
+    width: 100%;
   }
   .show__nav {
     display: flex;
