--- a/src/pages/notFound/notfound.css
+++ b/src/pages/notFound/notfound.css
@@ -1,6 +1,7 @@
 .notfound__container {
   text-align: center;
   padding-top: 8rem;
+  margin-bottom: 5rem;
 }
 .notfound__container .btn {
   margin-top: 2rem;
